fix original icons alignment by removing twcss

--- a/src/content/views/App.css
+++ b/src/content/views/App.css
@@ -1,4 +1,3 @@
-@import "tailwindcss";
 
 .popup-container {
   position: fixed;
@@ -8,7 +7,6 @@
   z-index: 100;
   display: flex;
   align-items: flex-end;
-  font-family: ui-sans-serif, system-ui, sans-serif;
   user-select: none;
   line-height: 1em;
 }
@@ -79,13 +77,16 @@
   color: #d0d0d0;
 }
 
+.archived-section>button span {
+  font-weight: 600;
+}
+
 .archived-toggle {
   display: flex;
   align-items: center;
   gap: 8px;
   width: 100%;
   padding: 8px 12px;
-  /* background: rgba(255, 255, 255, 0.05); */
   border: none;
   border-radius: 50px;
   color: inherit;
@@ -124,7 +125,6 @@
   justify-content: space-between;
   align-items: center;
   padding: 6px 8px 6px 12px;
-  /* background: rgba(255, 255, 255, 0.03); */
   border-radius: 50px;
   font-size: 14px;
   font-weight: 500;
@@ -144,19 +144,20 @@
 }
 
 .unarchive-btn {
-  /* width: 28px; */
-  /* height: 28px; */
   display: flex;
   align-items: center;
   justify-content: center;
   background: transparent;
   border: none;
-  /* border: 1px solid rgba(255, 255, 255, 0.2); */
-  /* color: #8ab4f8; */
   border-radius: 50%;
   padding: 6px;
   cursor: pointer;
-  font-size: 11px;
+}
+
+.unarchive-btn svg {
+  color: #d0d0d0;
+  width: 18px !important;
+  height: 18px !important;
 }
 
 .unarchive-btn:hover {
@@ -168,6 +169,5 @@
   padding: 0 8px;
   font-size: 12px;
   color: #9aa0a6;
-  /* text-align: center; */
   font-style: italic;
 }
